--- a/Booker/Booker.csproj
+++ b/Booker/Booker.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Booker.cs" />
     <Compile Include="BookPage.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
