--- a/Booker/packages.config
+++ b/Booker/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="epubReader" version="1.0.0" targetFramework="net452" />
+  <package id="JSON" version="1.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
